# WinGfxDriverDetect

./: .clang-format  CMakeLists.txt  README.md  dx11.h  dx12.h  known_drivers.h  main.cpp  openCL.h  openGL.h  vulkan.h
