cmake_minimum_required(VERSION 3.10.0)
project(GetDriverStore)

option(SUPPORT_OPENGL "Enable OpenGL support" ON)
option(SUPPORT_OPENCL "Enable OpenCL support" ON)
option(SUPPORT_VULKAN "Enable Vulkan support" ON)
option(SUPPORT_DX11 "Enable DirectX11 support" ON)
option(SUPPORT_DX12 "Enable DirectX12 support" ON)

if(MSVC)
    add_compile_options(
        $<$<CONFIG:>:/MT> #---------|
        $<$<CONFIG:Debug>:/MTd> #---|-- Statically link the runtime libraries
        $<$<CONFIG:Release>:/MT> #--|
    )
endif()

add_executable(GetDriverStore main.cpp known_drivers.h)
target_compile_features(GetDriverStore PRIVATE cxx_std_17)

if(SUPPORT_OPENGL)
    find_package(OpenGL REQUIRED)
    target_link_libraries(GetDriverStore PRIVATE OpenGL::GL)
    target_compile_definitions(GetDriverStore PRIVATE SUPPORT_OPENGL=1)
    target_sources(GetDriverStore PRIVATE opengl.h)
endif()
if(SUPPORT_OPENCL)
    find_package(OpenCL REQUIRED)
    target_link_libraries(GetDriverStore PRIVATE OpenCL::OpenCL)
    target_compile_definitions(GetDriverStore PRIVATE SUPPORT_OPENCL=1)
    target_sources(GetDriverStore PRIVATE opencl.h)
endif()
if(SUPPORT_VULKAN)
    find_package(Vulkan REQUIRED)
    target_link_libraries(GetDriverStore PRIVATE Vulkan::Vulkan)
    target_compile_definitions(GetDriverStore PRIVATE SUPPORT_VULKAN=1)
    target_sources(GetDriverStore PRIVATE vulkan.h)
endif()
if(SUPPORT_DX11)
    target_link_libraries(GetDriverStore PRIVATE d3d11)
    target_compile_definitions(GetDriverStore PRIVATE SUPPORT_DX11=1)
    target_sources(GetDriverStore PRIVATE dx11.h)
endif()
if(SUPPORT_DX12)
    target_link_libraries(GetDriverStore PRIVATE d3d12)
    target_compile_definitions(GetDriverStore PRIVATE SUPPORT_DX12=1)
    target_sources(GetDriverStore PRIVATE dx12.h)
endif()
